--- a/Webpack/task_2/package.json
+++ b/Webpack/task_2/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "task_1",
+  "name": "task_2",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build": "webpack"
+    "build": "webpack",
+    "start-dev": "webpack serve"
   },
   "keywords": [],
   "author": "",
