--- a/react_hooks/task_4/dashboard/package.json
+++ b/react_hooks/task_4/dashboard/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "aphrodite": "^2.4.0",
+    "axios": "^1.12.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
